add some good stuff

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "Varsity";
+  src: url('../public/fonts/varsity_regular.ttf') format('truetype');}
+
 html,
 body {
   padding: 0;
@@ -6,6 +10,7 @@ body {
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   font-size: 18px;
+  color:#222222;
 }
 
 * {
@@ -13,7 +18,7 @@ body {
 }
 
 a {
-  color: #0070f3;
+  color: #222222;
   text-decoration: none;
 }
 
@@ -24,4 +29,9 @@ a:hover {
 img {
   max-width: 100%;
   display: block;
+}
+
+h1,h2 {
+  font-family: "Varsity";
+  font-weight: 400;
 }
