--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -1,8 +1,8 @@
-// .container {
-//   max-width: 36rem;
-//   padding: 0 1rem;
-//   margin: 3rem auto 6rem;
-// }
+.container {
+  max-width: 100%;
+  padding: 0 1rem;
+  margin: 3rem auto 6rem;
+}
 
 .header {
   display: flex;
