center that ish

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -46,7 +46,7 @@ body, html {
 background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../public/images/chaparral.JPG");
 
 /* Set a specific height */
-height: 50%;
+height: 75vh;
 
 /* Position and center the image to scale nicely on all screens */
 background-position: center;
