okay fuck typescript

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -44,6 +44,7 @@ body, html {
 .hero-image {
 /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
 background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../public/images/chaparral.JPG");
+position: relative;
 
 /* Set a specific height */
 height: 75vh;
