--- a/styles/global.scss
+++ b/styles/global.scss
@@ -11,6 +11,7 @@ body {
   line-height: 1.6;
   font-size: 18px;
   color:#222222;
+  background-image: "/images/rustic-vintage-wooden-background_24837-264.png"
 }
 
 * {
@@ -70,5 +71,6 @@ color: white;
 
 .body {
   max-width: 1600px;
-  margin: auto 8%;
+  margin: auto 9%;
+  background-image: "/images/rustic-vintage-wooden-background_24837-264.png";
 }
