--- a/styles/global.scss
+++ b/styles/global.scss
@@ -34,9 +34,10 @@ img {
   display: block;
 }
 
-h1,h2, button, .MuiAppBar-root, .MuiTypography-h6 {
+h1,h2, button, .MuiAppBar-root, .MuiTypography-h6, .MuiDivider-fullWidth.MuiListItem-root {
   font-family: "Varsity" !important;
   font-weight: 400 !important;
+  color: #f2f2f2;
 }
 
 body, html {
