--- a/styles/global.scss
+++ b/styles/global.scss
@@ -34,10 +34,12 @@ img {
   display: block;
 }
 
-h1,h2, button, .MuiAppBar-root, .MuiTypography-h6, .MuiDivider-fullWidth.MuiListItem-root {
+h1,h2, button, .MuiAppBar-root, .MuiTypography-h6 {
   font-family: "Varsity" !important;
   font-weight: 400 !important;
-  color: #f2f2f2;
+  .MuiDivider-fullWidth.MuiListItem-root {
+    color: #fafafa !important;
+  }
 }
 
 body, html {
