--- a/styles/global.scss
+++ b/styles/global.scss
@@ -2,18 +2,18 @@
   font-family: "Varsity";
   font-style: normal;
   font-display: fallback;
-  src: url('../public/fonts/varsity_regular.ttf') format('truetype');
+  src: url("../public/fonts/varsity_regular.ttf") format("truetype");
 }
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
-    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   line-height: 1.6;
   font-size: 18px;
-  color:#222222;
+  color: #222222;
 }
 
 * {
@@ -34,7 +34,11 @@ img {
   display: block;
 }
 
-h1,h2, button, .MuiAppBar-root, .MuiTypography-h6 {
+h1,
+h2,
+button,
+.MuiAppBar-root,
+.MuiTypography-h6 {
   font-family: "Varsity" !important;
   font-weight: 400 !important;
   .MuiDivider-fullWidth.MuiListItem-root {
@@ -42,44 +46,47 @@ h1,h2, button, .MuiAppBar-root, .MuiTypography-h6 {
   }
 }
 
-body, html {
+body,
+html {
   height: 100%;
   display: flex;
 }
 
 /* The hero image */
 .hero-image {
-/* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../public/images/chaparral.JPG");
-display: flex;
+  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../public/images/chaparral.JPG");
+  display: flex;
 
-/* Set a specific height */
-height: 75vh;
+  /* Set a specific height */
+  height: 75vh;
 
-/* Position and center the image to scale nicely on all screens */
-justify-content: center;
-align-items: center;
-background-repeat: no-repeat;
-background-size: cover;
-position: relative;
+  /* Position and center the image to scale nicely on all screens */
+  justify-content: center;
+  align-items: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
 /* Place text in the middle of the image */
 .hero-text {
-text-align: center;
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-color: white;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
 
 .body {
-  max-width: 1600px;
+  max-width: 100vw;
   margin: auto 9%;
 }
 
-.container, .MuiBox-root {
+.container,
+.MuiBox-root {
   display: flex;
   flex-direction: column;
   justify-content: center;
